# rules_webpack

./: .bazelignore  .bazelrc  .bazelversion  .gitattributes  .gitignore  .npmignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  gazelle.patch  index.bzl  internal_deps.bzl  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.aspect/workflows/: bazelrc  config.yaml
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: BUILD.bazel  bazel7.bazelrc  buildifier.yaml  ci-vanilla-bazel.yaml  ci-workflows.yaml  ci.bazelrc  ci.yaml  publish.yaml  release.yaml  release_prep.sh  workspace_snippet.sh
@aspect-build/webpack/webpack/: BUILD.bazel
@aspect-build/webpack/webpack/worker/: BUILD.bazel
@bazel/webpack/webpack-dev-server/: BUILD.bazel
@bazel/webpack/webpack/worker/: BUILD.bazel
docs/: BUILD.bazel  bzlmod_migration.md  rules.md  webpack-dev-server.md  webpack.md
e2e/: WORKSPACE  package-lock.json  package.json
e2e/loaders/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  package.json  patch_file  pnpm-lock.yaml  webpack.config.cjs  webpack.css.cjs  webpack.html.cjs
e2e/loaders_jslib/: .bazelrc  BUILD.bazel  MODULE.bazel  package.json  pnpm-lock.yaml  tsconfig.json
e2e/loaders_jslib/src/: index.html
e2e/smoke/: .bazelignore  MODULE.bazel  WORKSPACE.bazel
e2e/smoke/rspack/: BUILD.bazel  package.json  pnpm-lock.yaml
e2e/smoke/src/: BUILD.bazel  entry-point.js  expected-rspack.js_  expected-v4.js_  expected-v5.js_  rspack.config.js
e2e/smoke/v4/: BUILD.bazel  package.json  pnpm-lock.yaml
e2e/smoke/v5/: BUILD.bazel  package.json  pnpm-lock.yaml
e2e/smoke_rjs3/: MODULE.bazel  pnpm-lock.yaml  pnpm-workspace.yaml
e2e/smoke_rjs3/src/: BUILD.bazel
e2e/test/: BUILD.bazel  bundle.expected.js_  module.js  worker.expected.js_
e2e/webpack_binary/: BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  webpack.config.js
e2e/webpack_binary/.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
e2e/worker/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  expected.js_  module.js  package.json  test.sh
e2e/workspace/: BUILD.bazel  WORKSPACE  package.json  pnpm-lock.yaml
e2e/workspace/src/: BUILD.bazel  index.js  module.js
patches/: aspect_bazel_lib_diff_output.patch
scripts/: mirror_releases.sh
tests/: package-lock.json  package.json
tests/simple/: BUILD.bazel  expected.js_  webpack.config.js
tests/worker/: BUILD.bazel  expected.js_  index.js  module.js  webpack.config.js
tests/worker/chunks/: 3.js  4.js
tools/: BUILD.bazel  preset.bazelrc
webpack/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl  webpack.bzl  webpack.config.js
webpack-cli/: BUILD.bazel
webpack-dev-server/: BUILD  BUILD.bazel  defs.bzl  entry_point.js  webpack.config.js
webpack/private/: BUILD.bazel  bundler_worker.js  expand_variables.bzl  rspack_binary.bzl  rspack_worker.js  types.d.ts  versions.bzl  webpack.config.js  webpack.config.js.tmpl  webpack_binary.bzl  webpack_bundle.bzl  webpack_create_configs.bzl  webpack_devserver.bzl  webpack_worker.js  worker_adapter.js
webpack/private/devserver/: BUILD.bazel  devserver.bzl  webpack.config.js
webpack/private/v5.69.1/: package.json  pnpm-lock.yaml
webpack/private/v5.72.1/: defs.bzl  repositories.bzl
webpack/private/v5.73.0/: defs.bzl  package.json  pnpm-lock.yaml  repositories.bzl
webpack/tests/: BUILD.bazel  package.json  pnpm-lock.yaml
webpack/tests/create_configs/: BUILD.bazel  expected.basic.webpack.js  expected.chdir.webpack.js  expected.devtool_mode.webpack.js  expected.entries.webpack.js  expected.entry.webpack.js
webpack/tests/cross-platform/: BUILD.bazel  webpack.config.js
webpack/tests/devserver/: BUILD.bazel  app.js  helper.js  index.html  webpack.config.js
webpack/tests/devserver-configure/: BUILD.bazel  configure_mode_test.sh  transitions.bzl
webpack/tests/devserver-configure-mode/: BUILD.bazel  analysis_test.bzl
webpack/tests/devtool-override/: BUILD.bazel  expected-rspack.js_  expected.js_  rspack.config.js  webpack.config.js
webpack/tests/simple/: BUILD.bazel  expected-rspack.js_  expected.js_  index.js  rspack.config.js  webpack.config.js
webpack/tests/worker/: BUILD.bazel  expected-rspack.js_  expected.js_  module.js  rspack.config.js  webpack.config.js
webpack/worker/: BUILD.bazel  webpack.config.js  worker_adapter.js
