load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "use_execroot_entry_point",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "use_execroot_entry_point_setting",
    flag_values = {":use_execroot_entry_point": "True"},
    visibility = ["//visibility:public"],
)

exports_files(["defs.bzl"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//webpack/private:webpack_bundle",
        "//webpack/private:webpack_devserver",
    ],
)
