bazel_dep(name = "aspect_rules_webpack", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_rules_webpack",
    path = "../..",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.7.6", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "v4-npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//v4:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "v4-npm")
npm.npm_translate_lock(
    name = "v5-npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//v5:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "v5-npm")
