# Override http_archive for local testing
local_repository(
    name = "aspect_rules_webpack",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

#######################
# rules_webpack setup #
#######################

# Fetch the Bazel module dependencies

load("@aspect_rules_webpack//webpack:dependencies.bzl", "rules_webpack_dependencies")

rules_webpack_dependencies()

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

# Fetch and register a nodejs interpreter, if you haven't already

load("@rules_nodejs//nodejs:repositories.bzl", "DEFAULT_NODE_VERSION", "nodejs_register_toolchains")

nodejs_register_toolchains(
    name = "node",
    node_version = DEFAULT_NODE_VERSION,
)

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "v4-npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//v4:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

npm_translate_lock(
    name = "v5-npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//v5:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@v4-npm//:repositories.bzl", v4_npm_repositories = "npm_repositories")
load("@v5-npm//:repositories.bzl", v5_npm_repositories = "npm_repositories")

v4_npm_repositories()

v5_npm_repositories()
