load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@npm//@bazel/webpack/webpack:defs.bzl", "webpack_bundle")

webpack_bundle(
    name = "bundle",
    args = [
        "./$(execpath module.js)",
        "--mode",
        "production",
        "-o",
        "$(RULEDIR)",
        "--output-filename",
        "bundle.js",
    ],
    webpack_config = ":webpack.config.js",
    data = [
        "module.js",
    ],
    outs = ["bundle.js"],
)

webpack_bundle(
    name = "bundle_worker",
    args = [
        "./$(execpath module.js)",
        "--mode",
        "production",
        "-o",
        "$(RULEDIR)",
        "--output-filename",
        "bundle_worker.js",
    ],
    webpack_config = ":webpack.config.js",
    data = [
        "module.js",
    ],
    outs = ["bundle_worker.js"],
    supports_workers = True
)

write_file(
    name = "update_gen",
    out = "update.sh",
    content = [
        "#!/bin/sh",
        "cd $BUILD_WORKSPACE_DIRECTORY",
        "cp -fv bazel-bin/test/bundle.js test/module.expected.js_",
    ],
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
)

diff_test(
    name = "test",
    failure_message = """to accept the new expected file:
         
         bazel run //test:update""",
    file1 = "module.expected.js_",
    file2 = "bundle.js",
)


diff_test(
    name = "test_worker",
    failure_message = """to accept the new expected file:
         
         bazel run //test:update""",
    file1 = "module.expected.js_",
    file2 = "bundle_worker.js",
)
