load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@npm//@aspect-build/webpack/webpack:defs.bzl", "webpack_bundle")

webpack_bundle(
    name = "bundle",
    entry_point = "module.js",
    webpack_config = ":webpack.config.js",
)

diff_test(
    name = "test",
    failure_message = """to accept the new expected file:
         
         bazel run //test:update""",
    file1 = "bundle.expected.js_",
    file2 = "bundle.js",
)

webpack_bundle(
    name = "bundle_worker",
    entry_points = {
        "module.js": "bundle_worker",
    },
    supports_workers = True,
    webpack_config = ":webpack.config.js",
)

diff_test(
    name = "test_worker",
    failure_message = """to accept the new expected file:
         
         bazel run //test:update""",
    file1 = "worker.expected.js_",
    file2 = "bundle_worker.js",
)

write_file(
    name = "update_gen",
    out = "update.sh",
    content = [
        "#!/bin/sh",
        "cd $BUILD_WORKSPACE_DIRECTORY",
        "cp -fv bazel-bin/test/bundle.js test/bundle.expected.js_",
        "cp -fv bazel-bin/test/bundle_worker.js test/worker.expected.js_",
    ],
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
)
