load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_binary", "webpack_bundle")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_library(
    name = "webpack_config",
    deps = [
        "//:node_modules/webpack",
    ],
)

webpack_binary(
    name = "webpack",
    node_modules = "//:node_modules",
)

webpack_bundle(
    name = "bundle",
    srcs = ["module.js"],
    entry_point = "index.js",
    webpack = ":webpack",
    webpack_config = "webpack.config.js",
    deps = [
        ":webpack_config",
    ],
)

build_test(
    name = "test",
    targets = [":bundle"],
)
