load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle")
load("@bazel_lib//lib:diff_test.bzl", "diff_test")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

webpack_bundle(
    name = "bundle",
    entry_point = "module.js",
    node_modules = "//:node_modules",
    supports_workers = True,
)

write_source_files(
    name = "write_bundle",
    files = {
        "expected.js_": ":bundle.js",
    },
)

webpack_bundle(
    name = "bundle_no_execroot_entry_point",
    entry_point = "module.js",
    node_modules = "//:node_modules",
    supports_workers = True,
    tags = ["manual"],
    use_execroot_entry_point = False,
)

not_windows = select({
    "@platforms//os:windows": ["@platforms//:incompatible"],
    "//conditions:default": [],
})

diff_test(
    name = "bundles_match",
    file1 = "bundle.js",
    file2 = "bundle_no_execroot_entry_point.js",
    target_compatible_with = not_windows,
)
