bazel_dep(name = "aspect_rules_webpack", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_rules_webpack",
    path = "../..",
)

bazel_dep(name = "bazel_lib", version = "3.2.2", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "3.0.3", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
