load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("//webpack:defs.bzl", "webpack_bundle")
load("//webpack-dev-server:defs.bzl", "webpack_dev_server")

webpack_bundle(
    name = "bundle",
    data = [
        "module.js",
    ],
    entry_point = "index.js",
    webpack_config = ":webpack.config.js",
)

write_file(
    name = "update_gen",
    out = "update.sh",
    content = [
        "#!/bin/sh",
        "cd $BUILD_WORKSPACE_DIRECTORY",
        "cp -fv bazel-bin/tests/simple/bundle.js tests/simple/expected.js_",
    ],
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
)

diff_test(
    name = "test",
    failure_message = """to accept the new expected file:
         
         bazel run //tests/simple:update""",
    file1 = "expected.js_",
    file2 = "bundle.js",
)

webpack_dev_server(
    name = "dev_server",
    args = [
        "--entry",
        "./$(execpath index.js)",
        "--mode",
        "development",
    ],
    data = [
        "index.js",
        "module.js",
    ],
    webpack_config = ":webpack.config.js",
)
