load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("//webpack:defs.bzl", "webpack_bundle")

webpack_bundle(
    name = "bundle",
    data = [
        "chunks/1.js",
        "chunks/2.js",
        "chunks/3.js",
        "chunks/4.js",
        "module.js",
    ],
    entry_points = {
        "index.js": "bundle",
    },
    supports_workers = True,
    webpack_config = ":webpack.config.js",
)

write_file(
    name = "update_gen",
    out = "update.sh",
    content = [
        "#!/bin/sh",
        "cd $BUILD_WORKSPACE_DIRECTORY",
        "cp -fv bazel-bin/tests/worker/bundle.js tests/worker/expected.js_",
    ],
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
)

diff_test(
    name = "test",
    failure_message = """to accept the new expected file:
         
         bazel run //tests/worker:update""",
    file1 = "expected.js_",
    file2 = "bundle.js",
)
