load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "webpack_bundle",
    srcs = ["webpack_bundle.bzl"],
    visibility = ["//webpack:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:copy_file",
        "@aspect_bazel_lib//lib:copy_to_bin",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
    ],
)

bzl_library(
    name = "webpack_devserver",
    srcs = ["webpack_devserver.bzl"],
    visibility = ["//webpack:__subpackages__"],
    deps = ["@aspect_rules_js//js:defs"],
)

exports_files([
    "webpack.config.js",
    "webpack_worker.js",
])
