load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

config_setting(
    name = "compilation_mode_dbg",
    values = {"compilation_mode": "dbg"},
    # Public for macro visibility only--do not use directly
    visibility = ["//visibility:public"],
)

config_setting(
    name = "compilation_mode_opt",
    values = {"compilation_mode": "opt"},
    # Public for macro visibility only--do not use directly
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "webpack_binary",
    srcs = ["webpack_binary.bzl"],
    visibility = ["//webpack:__subpackages__"],
    deps = [
        "@aspect_rules_js//js:defs",
        "@bazel_lib//lib:directory_path",
    ],
)

bzl_library(
    name = "webpack_bundle",
    srcs = ["webpack_bundle.bzl"],
    visibility = ["//webpack:__subpackages__"],
    deps = [
        ":webpack_binary",
        ":webpack_create_configs",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
        "@bazel_lib//lib:copy_file",
        "@bazel_lib//lib:copy_to_bin",
        "@bazel_lib//lib:expand_make_vars",
    ],
)

bzl_library(
    name = "webpack_devserver",
    srcs = ["webpack_devserver.bzl"],
    visibility = ["//webpack:__subpackages__"],
    deps = [
        ":webpack_binary",
        ":webpack_create_configs",
        "@aspect_rules_js//js:defs",
    ],
)

exports_files([
    "webpack.config.js.tmpl",
    "webpack_worker.js",
])

bzl_library(
    name = "webpack_create_configs",
    srcs = ["webpack_create_configs.bzl"],
    visibility = ["//webpack:__subpackages__"],
    deps = ["@bazel_skylib//lib:paths"],
)
