load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle")

webpack_bundle(
    name = "bundle-v4",
    srcs = ["module.js"],
    entry_point = "index.js",
    node_modules = "//v4:node_modules",
)

webpack_bundle(
    name = "bundle-v5",
    srcs = ["module.js"],
    entry_point = "index.js",
    node_modules = "//v5:node_modules",
)

# Validates that args are properly expanded when
# a format string is passed
entry_point_file = "entry-point.js"

webpack_bundle(
    name = "bundle-entry-args-v5",
    srcs = ["entry-point.js"],
    args = [
        "--entry",
        "$(rootpath {})".format(entry_point_file),
    ],
    node_modules = "//v5:node_modules",
)

write_source_files(
    name = "bundles",
    files = {
        "expected-v4.js_": ":bundle-v4.js",
        "expected-v5.js_": ":bundle-v5.js",
        "expected-v5.js_": ":bundle-entry-args-v5.js",
    },
)
