load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

webpack_bundle(
    name = "bundle",
    srcs = ["module.js"],
    entry_point = "index.js",
    node_modules = "//:node_modules",
)

build_test(
    name = "test",
    targets = [":bundle"],
)
