load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "webpack.config.js",
])

bzl_library(
    name = "devserver",
    srcs = ["devserver.bzl"],
    visibility = ["//webpack:__subpackages__"],
    deps = ["@aspect_rules_js//js:defs"],
)

copy_to_bin(
    name = "webpack.config",
    srcs = ["webpack.config.js"],
    visibility = ["//webpack:__subpackages__"],
)
